Added Homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ip-userlist",
   "private": true,
+  "homepage": "/teamlist-ng/",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
